# SukiSU-Ultra

./: .gitignore
.github/: FUNDING.yml
.github/workflows/: build-manager.yml  ddk-lkm.yml  ksud-cpp.yml  ksud.yml  ksuinit-cpp.yml
docs/: HYMOFS.md  README.md  superkey-auth.md
docs/guide/: how-to-integrate.md  installation.md
docs/ja/: README.md
docs/ru/: README.md
docs/ru/guide/: how-to-integrate.md  installation.md
docs/tr/: README.md
docs/zh/: README.md
docs/zh/guide/: how-to-integrate.md  installation.md
kernel/: Kbuild  Kconfig  allowlist.c  apk_sign.c  app_profile.c  file_wrapper.c  kernel_compat.h  kernel_umount.c  kernel_umount.h  ksu.c  ksu.h  ksud.c  ksud.h  manager.h  manager_sign.h  manual_su.c  manual_su.h  pkg_observer.c  seccomp_cache.c  setuid_hook.c  setuid_hook.h  sucompat.c  sucompat.h  sulog.c  supercalls.c  supercalls.h  superkey.c  superkey.h  superkey_gen.py  syscall_hook_manager.c  syscall_hook_manager.h  throne_tracker.c  util.c  util.h  zygisk.c  zygisk.h
kernel/kpm/: compact.c  kpm.c  kpm.h  super_access.c  super_access.h
kernel/selinux/: rules.c  selinux.c  selinux.h  sepolicy.c
kernel_patches/: 40_ksu_manual_hooks_gki-6.6.patch  50_add_hymofs_gki-6.6.patch
manager/: build.gradle.kts  gradle.properties  randomizer  settings.gradle.kts
manager/app/: build.gradle.kts
userspace/ksud/: CMakeLists.txt  build.rs
userspace/ksud-cpp/: CMakeLists.txt
userspace/ksud-cpp/scripts/: embed_assets.py
userspace/ksud-cpp/src/: assets.cpp  assets.hpp  cli.cpp  defs.hpp  init_event.cpp  (+2 more)
userspace/ksuinit/: CMakeLists.txt
(+216 files in other folders)
